Added: Browser login

--- a/app.env.example
+++ b/app.env.example
@@ -1,7 +1,4 @@
-CONTAAZUL_API_URI=""
-CONTAAZUL_CLIENT_ID=""
-CONTAAZUL_CLIENT_SECRET=""
-CONTAAZUL_REDIRECT_URI="http://127.0.0.1"
 CONTAAZUL_CREDENTIAL_MAIL=""
 CONTAAZUL_CREDENTIAL_PASS=""
+CONTAAZUL_LOGIN="https://login.contaazul.com/"
 NODE_ENV="production"
