--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc >> /dev/null",
+    "linter": "prettier --check ./src",
     "start:dev": "ts-node src/index.ts",
     "start:prod": "yarn run build; node ."
   },
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
-    "@types/selenium-webdriver": "^4.1.14"
+    "@types/selenium-webdriver": "^4.1.14",
+    "prettier": "^2.8.8"
   }
 }
